--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "jspdf": "^4.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-i18next": "^16.5.3",
-    "react-to-print": "^3.2.0"
+    "react-i18next": "^16.5.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
